# repodump

./: .gitignore  README.md  doc.md  lefthook.yml
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/: .gitignore  README.md  pyproject.toml
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/.github/workflows/: python-publish.yml
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/.ts/: tsm.json
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/APP/: eaglecool.py  git.py  github.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/PKG/: base64.py  importlib.py  keyring.py  pyscreeze.py  screeninfo.py  typing.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/STRUCT/: time_parse.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/STRUCT/DECOR/: singleton.py  tempdir.py  track_and_terminate.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/UTILS/: __init__.py  advanced_query.py  read.py  smart_query.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/src/zuu/io/: __init__.py  orjson.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/_SPECIALS/: tat.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/zuu/: test_io_json.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/zuu/APP/: test_github.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/zuu/PKG/: test_os.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/zuu/STRUCT/: test_DECOR_TAT.py  test_DECOR_singleton.py  test_DECOR_tempdir.py  test_PROP_file.py  test_dict_with_autosave.py  test_timeParse.py
dump/17d447e6-a8e2-4cec-a6ad-f2e0736936ba/[202502] zuu/tests/zuu/UTILS/: test_advanced_query.py  test_smart_query.py  test_string.py  test_traverse.py
dump/19ba89d5-fcc3-4792-bd0c-1e4ce9201a98/[20250228] zuto/: README.md  pyproject.toml  test.py
dump/19ba89d5-fcc3-4792-bd0c-1e4ce9201a98/[20250228] zuto/.ts/: tsm.json
dump/19ba89d5-fcc3-4792-bd0c-1e4ce9201a98/[20250228] zuto/src/zs/zuto/: builtin.py  cli.py  ctx.py  job.py  scheduler.py  utils.py
dump/19ba89d5-fcc3-4792-bd0c-1e4ce9201a98/[20250228] zuto/www/: test.py  test1.yml  test2.yml
dump/31f7e5ed-a18a-4b2a-85df-ceebc8851748/pymasscode/: .gitignore  README.md  pyproject.toml
dump/31f7e5ed-a18a-4b2a-85df-ceebc8851748/pymasscode/.ts/: tsm.json
dump/31f7e5ed-a18a-4b2a-85df-ceebc8851748/pymasscode/src/pymasscode/: README.md  __init__.py  dcls.py  loader.py  model.py  pyproject.toml
dump/31f7e5ed-a18a-4b2a-85df-ceebc8851748/pymasscode/src/pymasscode/etc/: fileProp.py  tinydb_query.py  utils.py
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/: .gitignore  README.md  pyproject.toml
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/.github/workflows/: python-publish.yml  update-release.yaml
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/.ts/: tsm.json
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/eaglewrap-example.library/: metadata.json  mtime.json
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/eaglewrap-example.library/images/M4X87OUR1RBR4.info/: metadata.json  test.py
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/eaglewrap-runner-example/: eagleWrapUtils.js  index.html  manifest.json
dump/44f5932c-739c-45d9-b9ef-e6adef78bcd8/eagle-wrap/src/eaglewrap/: __init__.py  __main__.py  api.py  bridge.py  cfg.py  model.py  utils.py
dump/78ac6277-4351-47f6-b646-dc8049804f79/zuu.py/: .gitignore  README.md  pyproject.toml
dump/78ac6277-4351-47f6-b646-dc8049804f79/zuu.py/.github/workflows/: python-publish.yml
dump/78ac6277-4351-47f6-b646-dc8049804f79/zuu.py/.ts/: tsm.json
dump/78ac6277-4351-47f6-b646-dc8049804f79/zuu.py/src/zuu/: appext_git.py  appext_github.py  appext_scoop.py  cls_dictWithAutoSave.py  cls_doesNothing.py  etc.py  ex_pyscreeze.py  prop_file.py  prop_timed.py  stdext_hashlib.py  stdext_importlib.py  util_dict.py  util_file.py  util_procLifetime.py  util_smartquery.py  util_tempdir.py  util_timeparse.py
dump/78ac6277-4351-47f6-b646-dc8049804f79/zuu.py/tests/: test_appext_github.py  test_cls_dictWithAutoSave.py  test_decor_tat.py  test_decorcls_singleton.py  test_etc_preservecwd.py  test_prop_file.py  test_stdext_string.py  test_util_dict.py  test_util_file.py  test_util_smartquery.py  test_util_tempdir.py  test_util_timeparse.py
dump/d5a8cd90-f74e-4009-8dd7-11d529852d06/[202502] zuto/: README.md  pyproject.toml  test.py
dump/d5a8cd90-f74e-4009-8dd7-11d529852d06/[202502] zuto/.ts/: tsm.json
dump/d5a8cd90-f74e-4009-8dd7-11d529852d06/[202502] zuto/src/zuto/: base.py  cli.py  etc.py  model.py
dump/d5a8cd90-f74e-4009-8dd7-11d529852d06/[202502] zuto/tests/ymlSources/: test.yml
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/: README.md  pyproject.toml  test.json  test.py
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/.github/workflows/: python-publish.yml
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/.ts/: tsm.json
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/src/zuto/: __init__.py  group.py  i.py  logger.py  model.py  runner.py  utils.py
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/src/zuto/groups/: builtin.py  ext.py
dump/f4fc122b-742b-4706-a9a6-2999f6ec98e8/[202409] zuto/tests/: test_utils.py
index/: index.json
scripts/: doc.py  (+2 more)
(+306 files in other folders)
